added events, reveal transitions, and mobile formatting

--- a/our-teams-pages/consulting.html
+++ b/our-teams-pages/consulting.html
@@ -5,7 +5,7 @@
         <title>SDSS</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/teams.css"/>
         <link rel="stylesheet" href="../css/style.css" />
     </head>
@@ -40,10 +40,10 @@
 
     <div class="content-teams" id="fade-in">
         <div class="team-title">Consulting Team</div>
-        <div class="team-description">Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.</div>
+        <div class="team-description">SDSS's Consulting Team gives students the opportunity to apply their skills and work on hands-on projects and with real-world companies.</div>
         
         <div class="subteam-title">Business Team</div>
-        <div class="team-image-row">
+        <div class="team-image-row" id="slide-in">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/howard.jpg"/>
                 <div class="exec-caption">
@@ -55,7 +55,7 @@
                 
             </div>
         </div>
-        <div class="team-image-row">
+        <div class="team-image-row reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/cello.jpg"/>
                 <div class="exec-name">Timothy Marcello Rowland Benny Pasaribu</div>
@@ -89,7 +89,7 @@
         </div>
 
         <div class="subteam-title">Social Good Team</div>
-        <div class="team-image-row">
+        <div class="team-image-row reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/mg.jpg"/>
                 <div class="exec-name">Mingon Song</div>
@@ -98,7 +98,7 @@
                 <a href='https://www.linkedin.com/in/mingon-song-8b0154224/>'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
-        <div class="team-image-row spacing-down">
+        <div class="team-image-row spacing-down reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/mojan.jpg"/>
                 <div class="exec-name">Mojad Majid</div>
