--- a/our-teams-pages/internal-team.html
+++ b/our-teams-pages/internal-team.html
@@ -5,7 +5,7 @@
         <title>SDSS</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/teams.css"/>
         <link rel="stylesheet" href="../css/style.css"/>
     </head>
@@ -36,10 +36,10 @@
         </ul>
     </nav>
 
-    <div class="content" id="fade-in">
+    <div class="content">
         <div class="team-title">Internal Team</div>
         <div class="team-description">Our group that enables a diverse community of passionate individuals to explore, learn, grow, and engage in social good in the world of Data Science and Statistics.</div>
-        <div class="team-image-row">
+        <div class="team-image-row" id="slide-in">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/lina.jpg"/>
                 <div class="exec-caption">
@@ -59,8 +59,8 @@
             </div>
         </div>
         
-        <div class="subteam-title operations">Operations</div>
-        <div class="team-image-row">
+        <div class="subteam-title operations spacing-up">Operations</div>
+        <div class="team-image-row reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/amanda.jpg"/>
                 <div class="exec-name">Amanda Li</div>
@@ -78,7 +78,7 @@
         </div>
 
         <div class='subteam-title web-dev'>Web Development</div>
-        <div class="team-image-row">
+        <div class="team-image-row reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/shirley.jpg"/>
                 <div class="exec-caption">
@@ -91,7 +91,7 @@
         </div>
 
         <div class="subteam-title">Marketing</div>
-        <div class="team-image-row">
+        <div class="team-image-row reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/lucy.jpg"/>
                 <div class="exec-caption">
@@ -112,7 +112,7 @@
         </div>
 
         <div class="subteam-title">Finance</div>
-        <div class="team-image-row spacing-down">
+        <div class="team-image-row reveal spacing-down">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/jake.jpg"/>
                 <div class="exec-caption">
