--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -5,7 +5,8 @@
         <title>SDSS</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/teams.css"/>
         <link rel="stylesheet" href="../css/style.css" />
     </head>
@@ -37,10 +38,10 @@
         </ul>
     </nav>
 
-    <div class="content" id="fade-in">
+    <div class="content">
         <div class="team-title">Professional Development</div>
         <div class="team-description">The Professional Development Team is responsible for planning monthly professional development and leadership events for students interested in building a career in Data Science and Statistics. </div>
-        <div class="team-image-row">
+        <div class="team-image-row reveal" id="slide-in">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/mudit.jpg"/>
                 <div class="exec-caption">
@@ -61,7 +62,7 @@
         </div>
 
         <div class="subteam-title">Logistics</div>
-        <div class="team-image-row">
+        <div class="team-image-row reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/khalid.jpg"/>
                 <div class="exec-name">Khalid Edris</div>
@@ -80,7 +81,7 @@
         </div>
 
         <div class="subteam-title">Outreach</div>
-        <div class="team-image-row spacing-down">
+        <div class="team-image-row spacing-down reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/shiri.jpg"/>
                 <div class="exec-caption">
@@ -98,6 +99,29 @@
                 <div class="exec-position">Co-Director of Outreach</div>
                 <div class="exec-socials"></div>
             </div>
+        </div>
+
+        <div class="events-section reveal spacing-down">
+            <div class="events-section-title">
+                Upcoming Events
+            </div>
+            <div class="events-title">
+                Resume/Cover Letter Workshop
+            </div>
+            <div class="events-container">
+                <img class="resume-workshop" src="/sdss-website-images/events/Workshop/Resume&Cover/1.png"/>
+                <div class="events-description">
+                    We would like to invite you all to our first event of the year: Resume & Cover Letter Workshop! 
+                    <br><br>
+                    It will take place on Monday, October 2nd from 6:00pm - 7:30pm at MP 118 (McLennan Physical Laboratories, Room 118) with a hybrid option if you cannot make it in person. 
+                    We will have light refreshments for those of you who attend in person so please come in and say hi if you can! 
+                    <br><br>
+                    <div class="event-link">
+                        <a href="https://forms.gle/3v8riAcSs4i4pGVP6"><button type="button">Register here!</button></a>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 
