--- a/our-teams-pages/aca-dev.html
+++ b/our-teams-pages/aca-dev.html
@@ -5,7 +5,8 @@
         <title>SDSS</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/teams.css"/>
         <link rel="stylesheet" href="../css/style.css"/>
     </head>
@@ -38,10 +39,10 @@
     </nav>
 
 
-    <div class="content" id="fade-in">
+    <div class="content">
         <div class="team-title">Academic Development</div>
         <div class="team-description">The Academic Development Team is dedicated to planning monthly academic-based events and gathering resources for students interested in Data Science and Statistics of all different skill levels.</div>
-        <div class="team-image-row">
+        <div class="team-image-row reveal" id="slide-in">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/danish.jpg"/>
                 <div class="exec-caption">
@@ -61,8 +62,8 @@
             </div>
         </div>
 
-        <div class="subteam-title">Logistics</div>
-        <div class="team-image-row">
+        <div class="subteam-title spacing-up">Logistics</div>
+        <div class="team-image-row reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/aaminah.jpg"/>
                 <div class="exec-name">Aaminah Ghumman</div>
@@ -81,7 +82,7 @@
         </div>
 
         <div class="subteam-title">Outreach</div>
-        <div class="team-image-row spacing-down">
+        <div class="team-image-row spacing-down reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/vicky.jpg"/>
                 <div class="exec-caption">
