fixing mobile formatting

--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -33,7 +33,7 @@
                 </ul>
                 <li><a href="../index.html#events">Events</a></li>
                 <li><a href="../index.html#join-us">Join Us</a></li>
-                <li><a href="../index.htmlcontact.html">Contact</a></li>
+                <li><a href="../index.html#contact">Contact</a></li>
             </div>
         </ul>
     </nav>
@@ -100,34 +100,10 @@
                 <div class="exec-socials"></div>
             </div>
         </div>
-
-        <div class="events-section reveal spacing-down">
-            <div class="events-section-title">
-                Upcoming Events
-            </div>
-            <div class="events-title">
-                Resume/Cover Letter Workshop
-            </div>
-            <div class="events-container">
-                <img class="resume-workshop" src="/sdss-website-images/events/Workshop/Resume&Cover/1.png"/>
-                <div class="events-description">
-                    We would like to invite you all to our first event of the year: Resume & Cover Letter Workshop! 
-                    <br><br>
-                    It will take place on Monday, October 2nd from 6:00pm - 7:30pm at MP 118 (McLennan Physical Laboratories, Room 118) with a hybrid option if you cannot make it in person. 
-                    We will have light refreshments for those of you who attend in person so please come in and say hi if you can! 
-                    <br><br>
-                    <div class="event-link">
-                        <a href="https://forms.gle/3v8riAcSs4i4pGVP6"><button type="button">Register here!</button></a>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
     </div>
 
     <footer class="footer">
         <div class="footer-images">
-            <img src="../sdss-website-images/logo%202%201.png" alt="white-logo"/>
             <a href='https://www.utoronto.ca/'><img src="../sdss-website-images/image%20(3)%201.png" alt="uoft"/></a>
         </div>
         <div class="footer-container">
