--- a/our-teams-pages/consulting.html
+++ b/our-teams-pages/consulting.html
@@ -72,6 +72,8 @@
             </div>
         <!-- </div>
         <div class="team-image-row"> -->
+        </div>
+        <div class="team-image-row reveal">
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/sameeck.jpg"/>
                 <div class="exec-name">Sameeck Bhatia</div>
