fixing some formatting

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                     
                                 </div>
                                 <div class="join-us-button-link">
-                                    <a href="https://forms.gle/GGwNJKUjZECsadFK8">
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSc6PJ_L-ySkaDO220GjopQm3Lf2eKEpCrWT3VrNNVz6HJqMVQ/viewform?usp=sf_link">
                                         <button type="button" class="join-us-gen-mem">Register Here!</button>
                                     </a>
                                 </div>
