--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -24,7 +24,7 @@
             <div class="menu">
                 <li class="About Us"><a href="../index.html#about-us">About Us</a></li>
                 <li class="our-team-navbar">
-                    <a href="../index.html#our-teams">Our Teams</a>
+                    <a>Our Teams</a>
                 <ul class="dropdown">
                     <li><a href="internal-team.html">Internal</a></li>
                     <li><a href="prof-dev.html">Professional Development</a></li>
