--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="About Us"><a href="#about-us" id="about-us-menu" onClick="uncheck()">About Us</a></li>
                 <li class="our-team-navbar">
                     <a>Our Teams</a>
-                <ul class="dropdown">
+                <ul class="dropdown" id="dropdown" onClick="showDropdown()"> 
                     <li><a href="our-teams-pages/internal-team.html">Internal</a></li>
                     <li><a href="our-teams-pages/prof-dev.html">Professional Development</a></li>
                     <li><a href="our-teams-pages/aca-dev.html">Academic Development</a></li>
@@ -42,6 +42,13 @@
                 if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
                     var checkbox_toggle = document.getElementById("checkbox_toggle")
                     checkbox_toggle.checked = false;
+                }
+            }
+
+            function showDropdown(){
+                if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+                    var dropdown = document.getElementById("dropdown")
+                    dropdown.style.display = "block";
                 }
             }
         </script>
