fixing safari formatting

--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -48,7 +48,7 @@
                     <div class="exec-name">Mudit Chandna</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-VP of PD</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/mudit-chandna/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
                 </div>
                 
             </div>
