adding some linkedin links and reducing file sizes for faster loading

--- a/our-teams-pages/aca-dev.html
+++ b/our-teams-pages/aca-dev.html
@@ -69,7 +69,7 @@
                 <div class="exec-name">Aaminah Ghumman</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Logistics</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/aaminahghumman/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
 
             <div class="exec-container">
@@ -89,7 +89,7 @@
                     <div class="exec-name">Vicky Chan</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Outreach</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/wan-tong-victoria-chan/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
                 </div>
                 
             </div>
@@ -98,7 +98,7 @@
                 <div class="exec-name">Sid Mehta</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Outreach</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/siddhant-mehta-b41a50228/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
     </div>
