--- a/our-teams-pages/consulting.html
+++ b/our-teams-pages/consulting.html
@@ -50,7 +50,7 @@
                     <div class="exec-name">Howard Guo</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Manager</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/howardguo/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
                 </div>
                 
             </div>
@@ -61,14 +61,14 @@
                 <div class="exec-name">Timothy Marcello Rowland Benny Pasaribu</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
-                <div class="exec-socials"></div>
+                <a href=''><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/claire.jpg"/>
                 <div class="exec-name">Claire Jaroonjetjumnong</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/claire-lapatrada-jaroonjetjumnong-4a0b5b26b/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         <!-- </div>
         <div class="team-image-row"> -->
@@ -79,7 +79,7 @@
                 <div class="exec-name">Sameeck Bhatia</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/sameeck-bhatia/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/bryson.jpg"/>
@@ -97,7 +97,7 @@
                 <div class="exec-name">Mingon Song</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Manager</div>
-                <a href='https://www.linkedin.com/in/mingon-song-8b0154224/>'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
+                <a href='https://www.linkedin.com/in/mingon-song-8b0154224/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
         <div class="team-image-row spacing-down reveal">
@@ -107,19 +107,21 @@
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <!-- <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/> -->
                 <div class="exec-position">Project Associate</div>
-                <img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png"></img>
+                <a href='https://www.linkedin.com/in/mojan-m/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/krisha.jpg"/>
                 <div class="exec-name">Krisha Kalsi</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
+                <a href='https://www.linkedin.com/in/krisha-kalsi/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/linh.jpg"/>
                 <div class="exec-name">Nguyen Thao Linh Pham</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
+                <a href='https://www.linkedin.com/in/linhphamuoft'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
 
