--- a/our-teams-pages/internal-team.html
+++ b/our-teams-pages/internal-team.html
@@ -98,7 +98,7 @@
                     <div class="exec-name">Lucia Kim</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Director of External Affairs</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/luci-kim'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
                 </div>
                 
             </div>
@@ -107,7 +107,7 @@
                 <div class="exec-name">Jessica Im</div>
                 <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Graphic Designer</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/im-jessica/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
 
