--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -97,7 +97,7 @@
                 <div class="exec-name">Jakub Riha</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Outreach</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/-jakub-riha/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
     </div>
