--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="About Us"><a href="#about-us" id="about-us-menu" onClick="uncheck()">About Us</a></li>
                 <li class="our-team-navbar">
                     <a>Our Teams</a>
-                <ul class="dropdown" id="dropdown" onmousedown="showDropdown()"> 
+                <ul class="dropdown" id="dropdown" onClick="javascript: showDropdown()"> 
                     <li><a href="our-teams-pages/internal-team.html">Internal</a></li>
                     <li><a href="our-teams-pages/prof-dev.html">Professional Development</a></li>
                     <li><a href="our-teams-pages/aca-dev.html">Academic Development</a></li>
