fixing some formatting again

--- a/index.html
+++ b/index.html
@@ -229,13 +229,14 @@
                                 <div class="join-us-button-title">Executive Team</div>
                                 <div class="join-us-button-description">
                                     The Executive Team provides the foundational base for creating mentorship, support, and community for SDSS. It consists of the:
+                                    <br><br>
                                     <ul>
                                         <li>AcaDev Team</li>
                                         <li>PD Team</li>
                                         <li>Internal Team</li>
                                     </ul>
                                     <br>
-                                    Click below for more information:
+                                    Join us!
                                 </div>
                                 <div class="join-us-button-link">
                                     <a href="">
@@ -248,12 +249,14 @@
                             <div class="join-us-square">
                                 <div class="join-us-button-title">Consulting Team</div>
                                 <div class="join-us-button-description">
-                                    SDSS provides opportunities for members to gain practical experience by working on real-world projects, applying their skills to solve meaningful problems, contributing to organizations, and seeking data-drive solutions. Current Teams consist of:                                <ul>
+                                    SDSS provides opportunities for members to gain practical experience by working on real-world projects, applying their skills to solve meaningful problems, contributing to organizations, and seeking data-drive solutions. Current Teams consist of:    
+                                    <br><br>                            
+                                    <ul> 
                                         <li>Business Team</li>
                                         <li>Social Good Team</li>
                                     </ul>
                                     <br>
-                                    Click below for more information:
+                                    Join us!
                                 </div>
                                 <div class="join-us-button-link">
                                     <a href="">
