fixing some formatting

--- a/our-teams-pages/aca-dev.html
+++ b/our-teams-pages/aca-dev.html
@@ -58,7 +58,7 @@
                 <div class="exec-name">Raghav Singha</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-VP of AD</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/astroraghav04/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
 
