--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -76,7 +76,7 @@
                 <div class="exec-name">Arnav Dey</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-Director of Logistics</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/arnav-dey-603684246/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
         </div>
 
