--- a/our-teams-pages/internal-team.html
+++ b/our-teams-pages/internal-team.html
@@ -6,6 +6,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/png" href="/sdss-website-images/favicomatic/favicon-16x16.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/sdss-website-images/favicomatic/favicon-32x32.png" sizes="16x16" />
         <link rel="stylesheet" href="../css/teams.css"/>
         <link rel="stylesheet" href="../css/style.css"/>
     </head>
