improving some formatting

--- a/index.html
+++ b/index.html
@@ -231,12 +231,10 @@
                                     The Executive Team provides the foundational base for creating mentorship, support, and community for SDSS. It consists of the:
                                     <br><br>
                                     <ul>
-                                        <li>AcaDev Team</li>
-                                        <li>PD Team</li>
+                                        <li>Academic Development Team</li>
+                                        <li>Professional Development Team</li>
                                         <li>Internal Team</li>
                                     </ul>
-                                    <br>
-                                    Join us!
                                 </div>
                                 <div class="join-us-button-link">
                                     <a href="">
@@ -255,8 +253,6 @@
                                         <li>Business Team</li>
                                         <li>Social Good Team</li>
                                     </ul>
-                                    <br>
-                                    Join us!
                                 </div>
                                 <div class="join-us-button-link">
                                     <a href="">
