--- a/index.html
+++ b/index.html
@@ -89,13 +89,12 @@
                     <div class="intro-body2">
                         Our group that enables a diverse community of passionate individuals to explore, learn, grow, and
                         engage in social good in the world of Data Science and Statistics.
+                        <div class="button-container">
+                            <a href='#join-us'><button type="button" class='get-involved'>Get Involved</button></a>
+                        </div>
                     </div>
-
                 </div>
 
-                <div class="button-container">
-                    <a href='#join-us'><button type="button" class='get-involved'>Get Involved</button></a>
-                </div>
 
             </div>
         </div>
@@ -164,7 +163,7 @@
                     
                 </div> -->
                     
-                <div class="events-section">
+                <div class="events-section reveal">
                     <div class="events-section-title">
                         Past Events
                     </div>
@@ -178,9 +177,9 @@
                         <div class="events-description">
                             Introducing our first event of the year: <b>Resume & Cover Letter Workshop</b>! 
                             <br><br>
-                            <div class="event-link">
+                            <!-- <div class="event-link">
                                 <a href="https://forms.gle/3v8riAcSs4i4pGVP6"><button type="button">Register here!</button></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
