--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
 
-        <div class="content" id="fade-in">
+        <div class="content" id="slide-in">
             <div class="intro">
                 <div class="intro1">
                     University of Toronto's
