--- a/our-teams-pages/aca-dev.html
+++ b/our-teams-pages/aca-dev.html
@@ -51,7 +51,7 @@
                     <div class="exec-name">Danish Ahmed</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Co-VP of AD</div>
-                <div class="exec-socials"></div>
+                <a href='https://www.linkedin.com/in/danish-ahmed-bombal/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
                 </div>
                 
             </div>
