--- a/our-teams-pages/consulting.html
+++ b/our-teams-pages/consulting.html
@@ -63,7 +63,7 @@
                 <div class="exec-name">Timothy Marcello Rowland Benny Pasaribu</div>
                 <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
                 <div class="exec-position">Project Associate</div>
-                <a href=''><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
+                <a href='https://www.linkedin.com/in/timothy-pasaribu-0804aa211/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
             </div>
             <div class="exec-container">
                 <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/claire.jpg"/>
