--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- LOGO -->
         <a href="#"><img src="sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
         <!-- NAVIGATION MENU -->
-        <ul class="nav-links">
+        <ul class="nav-links navbar-nav me-2">
             <input type="checkbox" id="checkbox_toggle"/>
             <label for="checkbox_toggle" class="hamburger">&#9776;</label>
             <!-- NAVIGATION MENUS -->
