--- a/our-teams-pages/prof-dev.html
+++ b/our-teams-pages/prof-dev.html
@@ -38,6 +38,13 @@
                 <li><a href="../index.html#contact">Contact</a></li>
             </div>
         </ul>
+        <script type="text/javascript">
+            const container = document.querySelector(".dropdown");
+            container.addEventListener('touchstart', () => {});
+            container.addEventListener('touchend', () => {});
+            container.addEventListener('touchcancel', () => {});
+            container.addEventListener('touchmove', () => {});
+        </script>
     </nav>
 
     <div class="content">
