--- a/our-teams-pages/consulting.html
+++ b/our-teams-pages/consulting.html
@@ -6,7 +6,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="/sdss-website-images/favicomatic/favicon-16x16.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="/sdss-website-images/favicomatic/favicon-32x32.png" sizes="16x16" />
         <link rel="stylesheet" href="../css/teams.css"/>
@@ -14,7 +13,6 @@
     </head>
 
 <body>
-
     <nav class="navbar ms-auto" id="navBar">
         <!-- LOGO -->
         <a href="../index.html"><img src="../sdss-website-images/black-sdss-logo.png" alt="logo" /></a>
@@ -38,6 +36,13 @@
                 <li><a href="../index.html#contact">Contact</a></li>
             </div>
         </ul>
+        <script type="text/javascript">
+            const container = document.querySelector(".dropdown");
+            container.addEventListener('touchstart', () => {});
+            container.addEventListener('touchend', () => {});
+            container.addEventListener('touchcancel', () => {});
+            container.addEventListener('touchmove', () => {});
+        </script>
     </nav>
 
 
