trying to fix safari bug

--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
                 <li class="About Us"><a href="#about-us" id="about-us-menu" onClick="javascript: uncheck()">About Us</a></li>
                 <li class="our-team-navbar">
                     <a>Our Teams</a>
-                <ul class="dropdown" id="dropdown" onfocus="javascript: showDropdown()"> 
+                    <div onclick="void(0);">
+                        <ul class="dropdown" id="dropdown" onclick="javascript: showDropdown()"> 
+                            <li><a href="our-teams-pages/internal-team.html">Internal</a></li>
+                            <li><a href="our-teams-pages/prof-dev.html">Professional Development</a></li>
+                            <li><a href="our-teams-pages/aca-dev.html">Academic Development</a></li>
+                            <li><a href="our-teams-pages/consulting.html">Consulting</a></li>
+                        </ul>
+                        <li id="events-menu"><a href="#events" onClick="uncheck()">Events</a></li>
+                        <li id="join-us-menu"><a href="#join-us" onClick="uncheck()">Join Us</a></li>
+                        <li id="contact-menu"><a href="#contact" onClick="uncheck()">Contact</a></li>
+                    </div>
+                <!-- <ul class="dropdown" id="dropdown" onfocus="javascript: showDropdown()"> 
                     <li><a href="our-teams-pages/internal-team.html">Internal</a></li>
                     <li><a href="our-teams-pages/prof-dev.html">Professional Development</a></li>
                     <li><a href="our-teams-pages/aca-dev.html">Academic Development</a></li>
@@ -34,7 +45,7 @@
                 </ul>
                 <li id="events-menu"><a href="#events" onClick="uncheck()">Events</a></li>
                 <li id="join-us-menu"><a href="#join-us" onClick="uncheck()">Join Us</a></li>
-                <li id="contact-menu"><a href="#contact" onClick="uncheck()">Contact</a></li>
+                <li id="contact-menu"><a href="#contact" onClick="uncheck()">Contact</a></li> -->
             </div>
         </ul>
         <script type="text/javascript">
