editing internal team

--- a/our-teams-pages/internal-team.html
+++ b/our-teams-pages/internal-team.html
@@ -88,19 +88,6 @@
                 </div>
             </div>
 
-            <div class='subteam-title web-dev'>Web Development</div>
-            <div class="team-image-row reveal">
-                <div class="exec-container">
-                    <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/shirley.jpg"/>
-                    <div class="exec-caption">
-                        <div class="exec-name">Shirley Chen</div>
-                    <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
-                    <div class="exec-position">Web Developer</div>
-                    <a href='https://www.linkedin.com/in/shirley-chen-7b153216b/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
-                    </div>
-                </div>
-            </div>
-
             <div class="subteam-title">Marketing</div>
             <div class="team-image-row reveal">
                 <div class="exec-container">
@@ -119,6 +106,17 @@
                     <img src="/sdss-website-images/exec-seperator.png" class="exec-separator"/>
                     <div class="exec-position">Graphic Designer</div>
                     <a href='https://www.linkedin.com/in/im-jessica/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
+                </div>
+            </div>
+            <div class="team-image-row reveal">
+                <div class="exec-container">
+                    <img class="exec-image" src="../sdss-website-images/sdss-exec-pictures/shirley.jpg"/>
+                    <div class="exec-caption">
+                        <div class="exec-name">Shirley Chen</div>
+                    <img src="../sdss-website-images/exec-seperator.png" class="exec-separator"/>
+                    <div class="exec-position">Director of Partnerships</div>
+                    <a href='https://www.linkedin.com/in/shirley-chen-7b153216b/'><img class="exec-linkedin" src="../sdss-website-images/linkedin-purple.png" id=="exec-linkedin"></img></a>
+                    </div>
                 </div>
             </div>
 
